use system default path

--- a/templates/default/gitolite.rc.erb
+++ b/templates/default/gitolite.rc.erb
@@ -20,9 +20,8 @@ $GL_CONF_COMPILED="$GL_ADMINDIR/conf/gitolite.conf-compiled.pm";
 # These variables are set automatically by the install method you choose.
 #            (PACKAGE MAINTAINERS: PLEASE READ doc/packaging.mkd)
 
-# $GL_PACKAGE_CONF = "";
-# $GL_PACKAGE_HOOKS = "";
-
+$GL_PACKAGE_CONF = "/var/gitolite/conf";
+$GL_PACKAGE_HOOKS = "/var/gitolite/hooks";
 
 # ------------------------------------------------------------------------------
 # most often used/changed variables
